<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="@string/resultTV"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1"
        android:paddingVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/button_c"
            android:layout_margin="12dp"
            android:backgroundTint="#F44336"
            android:text="@string/button_c"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/button_open_bracket"
            android:layout_margin="12dp"
            android:backgroundTint="#A1A1A1"
            android:text="@string/button_open_bracket"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/button_close_bracket"
            android:layout_margin="12dp"
            android:backgroundTint="#A1A1A1"
            android:text="@string/button_close_bracket"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cornerRadius="36dp"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/button_divide"
            android:layout_margin="12dp"
            android:backgroundTint="#FF9800"
            android:text="@string/button_divide"
            />


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_7"
                android:layout_margin="12dp"
                android:text="@string/button_7"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_8"
                android:layout_margin="12dp"
                android:text="@string/button_8"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_9"
                android:layout_margin="12dp"
                android:text="@string/button_9"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_multiply"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_multiply"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_4"
                android:layout_margin="12dp"
                android:text="@string/button_4"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_5"
                android:layout_margin="12dp"
                android:text="@string/button_5"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_6"
                android:layout_margin="12dp"
                android:text="@string/button_6"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_plus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_plus"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_1"
                android:layout_margin="12dp"
                android:text="@string/button_1"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_2"
                android:layout_margin="12dp"
                android:text="@string/button_2"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_3"
                android:layout_margin="12dp"
                android:text="@string/button_3"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_minus"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_minus"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:id="@+id/button_ac"
                android:layout_margin="12dp"
                android:backgroundTint="#F44330"
                android:text="@string/button_ac"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_0"
                android:layout_margin="12dp"
                android:text="@string/button_0"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_dot"
                android:layout_margin="12dp"
                android:text="@string/button_dot"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/button_equals"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/button_equals"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>